objects/PC_AdverseEvent__c.object
<CustomObject>
    <fields>
        <fullName>PC_Report_to_FDA__c</fullName>
        <description>This report will be sent to FDA</description>
        <label>Report to FDA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ReporterAddress__c</fullName>
        <description>The complete address of the person who reports the adverse event.</description>
        <label>Reporter Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_City__c</fullName>
        <description>Reporter City</description>
        <label>Reporter City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_Country__c</fullName>
        <description>Reporter Country</description>
        <label>Reporter Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_Email__c</fullName>
        <description>Email address of the Reporter</description>
        <label>Reporter&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_First_Name__c</fullName>
        <description>First name of the reporter</description>
        <label>Reporter&apos;s First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_Last_Name__c</fullName>
        <description>Last name of the Reporter</description>
        <label>Reporter&apos;s Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_Phone__c</fullName>
        <description>The telephone number of the person who reports the adverse event.</description>
        <label>Reporter&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_State__c</fullName>
        <description>Reporter State</description>
        <label>Reporter State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Reporter_Zip_Code__c</fullName>
        <description>Reporter&apos;s contact Zip Code.</description>
        <inlineHelpText>Reporter Zip Code</inlineHelpText>
        <label>Reporter Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Reporter__c</fullName>
        <description>The name of the person who reports the adverse event.</description>
        <label>Reporter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Route_of_Administration__c</fullName>
        <description>Route in which patient consumed the product.</description>
        <label>Route of Administration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Stop_Date__c</fullName>
        <description>Indicates the actual or best estimate of the date of end of the adverse event</description>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_SubmissionStatus__c</fullName>
        <description>Based on the field value , new versions of the adverse Event can be created</description>
        <label>Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Therapy_End_Date__c</fullName>
        <description>Indicates the  date on which the administration of the therapy ended.</description>
        <label>Therapy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Therapy_Start_Date__c</fullName>
        <description>Indicates the date on which the administration of the therapy started.</description>
        <label>Therapy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_VersionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Version Number gives the info on which version of Adverse Event the user is on.</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Weight_Unit__c</fullName>
        <description>Unit in which the patient&apos;s  weight is denoted. For example, lb. or kg.</description>
        <label>Weight Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>lb</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Weight__c</fullName>
        <description>Weight of the Patient</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adverse Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Patient__c</columns>
        <columns>PC_Event_Onset_Date__c</columns>
        <columns>PC_Hospitalization_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AE-{00000000}</displayFormat>
        <label>Adverse Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adverse Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>